# f1-mcp

./: README.md  pyproject.toml
src/f1_mcp/: f1_mcp_server.py
